--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,21 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Felvetelizok"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1300">
-    <Grid>
+        Title="MainWindow" Height="550" Width="1200"
+        Background="#212121">
+
+    <Viewbox>
+
+        <Grid Background="#3d3d3d" Margin="10 0 10 0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="dgFelvetelizok" Margin="10" AutoGeneratingColumn="OnAutoGeneratingColumn">
-
+            <DataGrid HorizontalContentAlignment="Center" Width="600" Height="250" FontSize="9.5" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" RowHeaderStyle="{DynamicResource DataGridRowHeaderStyle1}" Style="{DynamicResource DataGridStyle1}" x:Name="dgFelvetelizok"  Margin="10" AutoGenerateColumns="False" >
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="OM_Azon" Width="70" Binding="{Binding OM_Azonosito}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Neve" Width="90" Binding="{Binding Neve}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Email" Width="110" Binding="{Binding Email}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="SzuletesiDatum" Width="110" Binding="{Binding SzuletesiDatum}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Cím" Width="120" Binding="{Binding ErtesitesiCime}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Matek" Width="45" Binding="{Binding Matematika}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Magyar" Width="45" Binding="{Binding Magyar}"></DataGridTextColumn>
+                </DataGrid.Columns>
         </DataGrid>
+        
         <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
-            <Button x:Name="btnImport" Content="Importálás" Width="130" Height="30" FontSize="15" FontWeight="Bold" Margin="10" Click="btnImport_Click"/>
-            <Button x:Name="btnExport" Content="Exportálás" Width="130" Height="30" FontSize="15" FontWeight="Bold" Margin="10" Click="btnExport_Click"/>
-            <Button x:Name="btnTorles" Content="Törlés" Width="130" Height="30" FontSize="15" FontWeight="Bold" Margin="10" Click="btnTorles_Click"/>
-            <Button x:Name="btnFelvesz" Content="Felvétel" Width="130" Height="30" FontSize="15" FontWeight="Bold" Margin="10" Click="btnFelvesz_Click"/>
-
+                <Button Style="{DynamicResource ButtonStyle1}" Foreground="#f5f5f5" x:Name="btnImport" Content="Importálás" Width="80" Height="20" FontSize="11" FontWeight="Bold" Margin="10" Click="btnImport_Click"/>
+                <Button Style="{DynamicResource ButtonStyle1}" Foreground="#f5f5f5" x:Name="btnExport" Content="Exportálás" Width="80" Height="20" FontSize="11" FontWeight="Bold" Margin="10" Click="btnExport_Click"/>
+                <Button Style="{DynamicResource ButtonStyle1}" Foreground="#f5f5f5" x:Name="btnTorles" Content="Törlés" Width="80" Height="20" FontSize="11" FontWeight="Bold" Margin="10" Click="btnTorles_Click"/>
+                <Button Style="{DynamicResource ButtonStyle1}" Foreground="#f5f5f5" x:Name="btnFelvesz" Content="Felvétel" Width="80" Height="20" FontSize="11" FontWeight="Bold" Margin="10" Click="btnFelvesz_Click"/>
+                <Button Style="{DynamicResource ButtonStyle1}" Foreground="#f5f5f5" x:Name="btnModosit" Content="Modosítás" Width="80" Height="20" FontSize="11" FontWeight="Bold" Margin="10" Click="btnModosit_Click"/>
         </StackPanel>
+        
     </Grid>
+    </Viewbox>
 </Window>
+
+<!--feher:      #f5f5f5 -->
+<!--sotetebb:   #212121 -->
+<!--vilagosabb: #3d3d3d -->
+<!--vilagos:    #525252 -->
+<!--border:     #171717 -->
